--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,8 +4,8 @@
   </div>
   
   <div class="panel-body">    
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name
-      )) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(
+      resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
       <div class="form-group">
@@ -14,9 +14,11 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> 
+        <%= f.label :password %> <% if @validatable %>
+        <i>(<%= @minimum_password_length %> 
         characters minimum)</i><% end %>
-        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+        <%= f.password_field :password, autocomplete: "off", 
+        class: "form-control" %>
       </div>
 
 
