--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,7 +1,6 @@
 <div class="jumbotron center">
-	<h1>Welcome to my app!</h1>
+	<h1>Perfumes 100% Originales!</h1>
 		<p>
-			<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
-			<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+    Escoge el perfume de Hombre o Mujer y págalo a <strong class="text-uppercase">credito</strong>
 		</p>
 </div>
