--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -6,7 +6,7 @@
       <%= link_to image_tag(pin.image.url(:medium)), pin %>
       <div class="panel-body">
         <%= pin.description %><br/>
-        <strong><%= pin.user.name if pin.user %></strong>
+        <p style="color:#c0392b;">$<%= pin.price %></p>
 
         <% if current_user && pin.user == current_user %>
           <div class="actions">
